--- a/style.css
+++ b/style.css
@@ -5,8 +5,28 @@ body, html{
     height: 100%;
 }
 
+header{
+    height: 15%;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    background-color: grey;
+    box-shadow: 1px 1px 10px 1px black;
+}
+
+h1{
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+}
+
+#logo{
+    position: fixed;
+    height: 80px;
+}
+
 #numero{
-    height: 50%;
+    height: 40%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -14,7 +34,7 @@ body, html{
 }
 
 #box-tasti{
-    height: 50%;
+    height: 45%;
     display: flex;
     align-items: center;
     justify-content: center;
